Fixed logo alignment on homepage

--- a/themes/openstack/css/combined.css
+++ b/themes/openstack/css/combined.css
@@ -1910,6 +1910,10 @@ footer {
 }
 
 .summit-banner .logo-box img {
+  width: 100%;
+}
+
+.summit-banner.editorial .logo-box img {
   width: 90%;
   margin-top:15px;
 }
